@@ -5,6 +5,8 @@
     * Add Net::SSLeay::Util::X509 class.
     * Add Net::SSLeay::Util::PKCS12 class.
     * Add Net::SSLeay::Util#dump_peer_certificate method.
+    * Add Net::SSLeay::Constant#OPENSSL_INIT_LOAD_SSL_STRINGS method.
+    * Add Net::SSLeay::Constant#OPENSSL_INIT_NO_LOAD_SSL_STRINGS method.
   [Incompatible Changes]
     * Remove the logic of OpenSSL initializetion because this is automatically executed after OpenSSL 1.1.0.
 0.015 2024-11-20
